# avs-device-sdk-bak

./: CMakeLists.txt
KWD/: CMakeLists.txt
KWD/NS/: CMakeLists.txt
KWD/NS/include/NS/: NSKeyWordDetector.h  NSWordDetector.h
KWD/NS/src/: CMakeLists.txt  NSKeyWordDetector.cpp
SampleApp/include/SampleApp/: SampleApplication.h
SampleApp/src/: CMakeLists.txt  SampleApplication.cpp  UIManager.cpp  UserInputManager.cpp
